--- a/app/views/members/_family_details.html.slim
+++ b/app/views/members/_family_details.html.slim
@@ -7,19 +7,24 @@
       li Enter a Last Name to see suggestions
 script id="new-family-template" type="text/x-handlebars-template"
   .family-details
-    = fields_for :family_members do
-      = text_field_tag 'form[family_members_attributes][{{id}}][family_name]',
-        nil,
-        placeholder: 'Family Name',
-        id: 'form_family_members_attributes_{{id}}_family_name',
-        class: 'span8'
-      //= text_field_tag :family_role, nil, placeholder: 'Family Role(s)', class: 'span8'
+    = text_field_tag 'form[family_members_attributes][{{id}}][family_name]',
+      nil,
+      placeholder: 'Family Name',
+      id: 'form_family_members_attributes_{{id}}_family_name',
+      class: 'span8'
+    = text_field_tag 'form[family_members_attributes][{{id}}][role_list]',
+      nil,
+      placeholder: 'Family Role(s)',
+      class: 'span8 family-roles'
 
 script id="existing-family-template" type="text/x-handlebars-template"
   .family-details
     h4 Herbst
     = hidden_field_tag 'form[family_members_attributes][{{id}}][family_id]', '{{familyId}}'
-    //= text_field_tag :family_role, nil, placeholder: 'Family Role(s)', class: 'span8'
+    = text_field_tag 'form[family_members_attributes][{{id}}][role_list]',
+      nil,
+      placeholder: 'Family Role(s)',
+      class: 'span8 family-roles'
 
 script id="family-suggestion-template" type="text/x-handlebars-template"
   li.family-suggestion data-family-id='{{id}}' data-family-name='{{name}}'
