--- a/app/views/members/_personal_details.html.slim
+++ b/app/views/members/_personal_details.html.slim
@@ -10,10 +10,10 @@ br
   = label_tag 'female-radio', class: 'form-inline-label' do
     = f.radio_button :gender, 'Female', id: 'female-radio', class: 'gender-radio'
     | Female
-// .form-subsection-block
+.form-subsection-block
   div.form-subsection-header Relationship Status
   = f.select :first_name, options_for_select([%q{Single}])
-// .form-subsection-block
+.form-subsection-block
   div.form-subsection-header Employment Status
   = f.select :first_name, options_for_select([%q{Employed}])
 .icon-text-field
