--- a/app/views/members/new.html.slim
+++ b/app/views/members/new.html.slim
@@ -9,6 +9,7 @@
     = render 'personal_details', f: f
     = render 'family_details', f: f
     = render 'contact_details', f: f
+    = render 'church_details', f: f
     br
     .form-buttons
       = link_to '#', id:'submit-button', class: 'submit-btn btn green pull-right' do
