--- a/app/views/members/_church_details.html.slim
+++ b/app/views/members/_church_details.html.slim
@@ -1,11 +1,5 @@
 h4.form-section-header *{:class => ["#{@color}-secondary"]} Church Details
-.icon-text-field
-  i.icon-envelope
-  = f.email_field :email, placeholder: 'Email Address', class: 'span8'
-= f.fields_for :phone_numbers do |builder|
-  .form-subsection-header = builder.object.name
-  .telephone-input
-    i.icon-phone
-    = builder.hidden_field :name
-    = builder.text_field :dialing_code, placeholder: 'Code', class: 'dialing-code'
-    = builder.text_field :number, placeholder: 'Number', class: 'number'
+div.form-subsection-header Preferred Service
+= f.select :preferred_service, options_for_select(CHURCH_SERVICES), prompt:true, class: 'span8'
+div.form-subsection-header Cell Group
+= f.select :cell_group, options_for_select(CELL_GROUPS), prompt:true,  class: 'span8'
