--- a/app/views/members/_contact_details.html.slim
+++ b/app/views/members/_contact_details.html.slim
@@ -19,6 +19,10 @@ h4.form-section-header *{:class => ["#{@color}-secondary"]} Contact Details
     = builder.text_field :city, placeholder: 'City', class: 'span8 city'
     = builder.text_field :postal_code, placeholder: 'Postal Code', class: 'span8 postalCode'
 
+label.checkbox
+  = f.check_box :accept_communication
+  | Accept Communication
+
 script id="address-suggestion-template" type="text/x-handlebars-template"
   li= link_to '#', class: 'quick-fill-address', data: { address1: '{{address1}}',
       address2: '{{address2}}',
