--- a/app/views/members/_family_details.html.slim
+++ b/app/views/members/_family_details.html.slim
@@ -8,7 +8,7 @@
 script id="new-family-template" type="text/x-handlebars-template"
   .family-details
     = text_field_tag 'form[family_members_attributes][{{id}}][family_name]',
-      nil,
+      "{{familyName}}",
       placeholder: 'Family Name',
       id: 'form_family_members_attributes_{{id}}_family_name',
       class: 'span8'
