--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -115,3 +115,12 @@
   float: right;
   color: #0088cc;
 }
+
+input[type="text"].required-field {
+  border-color: rgba(236, 224, 82, 0.8);
+  outline: 0;
+  outline: thin dotted 9;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 2px rgba(236, 224, 82, 0.8);
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(236, 224, 82, 0.8);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 2px rgba(236, 224, 82, 0.8);
+}
