--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -77,3 +77,12 @@ ul.family-suggestions {
     color: #0088cc;
   }
 }
+
+.remove-telephone {
+  i {
+    margin-right: 10px;
+  }
+  color: red;
+  display: block;
+  margin: -10px 0 10px 0;
+}
