--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -86,3 +86,22 @@ ul.family-suggestions {
   display: block;
   margin: -10px 0 10px 0;
 }
+
+.section-header {
+  padding: 0px;
+  font-size: 24px;
+  letter-spacing: -1px;
+  display: block;
+  color: #666;
+  margin: 10px 0 0 0;
+  font-weight: 300;
+  font-family: 'BebasNeueRegular';
+}
+
+.labeled-item.black {
+  color: black;
+  span {
+    color: black;
+  }
+}
+
