Advanced Members Form

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -49,6 +49,11 @@ input[type="radio"].gender-radio {
   display: inline;
 }
 
+.family-details:not(:last-child) {
+  border-bottom: 3px solid #CCC;
+  margin-bottom: 10px;
+}
+
 ul.family-suggestions {
   list-style: none;
   margin: 0;
