--- a/app/views/members/_family_details.html.slim
+++ b/app/views/members/_family_details.html.slim
@@ -1,31 +1,31 @@
 .family-details-section
   h4.form-section-header *{:class => ["#{@color}-secondary"]} Family Details
-  .family-suggestions-section
-    - if f.object.family_members.empty?
-      = link_to "+ Create New Family", '#', class: 'form-subsection-action', id: 'new-family-button'
+  = link_to "+ Add A Family", '#', class: 'form-subsection-action js', id: 'new-family-button'
+  - if f.object.family_members.empty?
+    .family-suggestions-section
       .form-subsection-header Suggested Families
       ul.family-suggestions
         li Enter a Last Name to see suggestions
   = f.fields_for :family_members do |builder|
-    h4= builder.object.family_name
-    = builder.hidden_field :id
-    = builder.text_field :role_list, placeholder: 'Family Role(s)', class: 'span8 family-roles'
-script id="new-family-template" type="text/x-handlebars-template"
+    .family-details
+      h4= builder.object.family_name
+      = builder.hidden_field :id
+      = builder.text_field :role_list, placeholder: 'Family Role(s)', class: 'span8 family-roles'
+
+- content_for :load_last do
+  = javascript_include_tag 'members'
+
+script id="family-template" type="text/x-handlebars-template"
   .family-details
+    | {{#if familyId}}
+    = hidden_field_tag'form[family_members_attributes][{{id}}][family_name]',
+      "{{familyId}}"
+    | {{/if}}
     = text_field_tag 'form[family_members_attributes][{{id}}][family_name]',
       "{{familyName}}",
       placeholder: 'Family Name',
       id: 'form_family_members_attributes_{{id}}_family_name',
-      class: 'span8'
-    = text_field_tag 'form[family_members_attributes][{{id}}][role_list]',
-      nil,
-      placeholder: 'Family Role(s)',
-      class: 'span8 family-roles'
-
-script id="existing-family-template" type="text/x-handlebars-template"
-  .family-details
-    h4 {{familyName}}
-    = hidden_field_tag 'form[family_members_attributes][{{id}}][family_id]', '{{familyId}}'
+      class: 'span8 family-name'
     = text_field_tag 'form[family_members_attributes][{{id}}][role_list]',
       nil,
       placeholder: 'Family Role(s)',
@@ -38,6 +38,3 @@ script id="family-suggestion-template" type="text/x-handlebars-template"
       | {{name}}
       small
         | {{ nameList members ', ' }}
-
-- content_for :load_last do
-  = javascript_include_tag 'members'
