--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -10,6 +10,8 @@
         .metro-list-item *{:class => [@color]}
           .row-fluid
             span.pull-right.metro-list-item-attachments.hidden-phone
+              = link_to edit_member_path(member) do
+                i.icon-wrench *{:class => ["#{@color}-secondary"]}
               = link_to member_path(member), method: :delete, confirm: "Are you sure?" do
                 i.icon-trash *{:class => ["#{@color}-secondary"]}
             .pull-right.metro-list-item-attachments.visible-phone
