--- a/app/views/members/_form.html.slim
+++ b/app/views/members/_form.html.slim
@@ -10,7 +10,7 @@
   = render 'church_details', f: f
   br
   .form-buttons
-    = link_to '#', id:'submit-button', class: 'submit-btn btn green pull-right' do
+    = link_to '#', id:'submit-button', class: 'submit-btn btn green pull-right js' do
       i.icon-save
       | Save Member
     = link_to 'Cancel', members_path, class: 'pull-right btn-link btn-link-red'
