--- a/app/views/members/_family_details.html.slim
+++ b/app/views/members/_family_details.html.slim
@@ -1,24 +1,31 @@
 .family-details-section
-  h4.form-section-header *{:class => ["#{@color}-secondary"]} Family Details
   = link_to "+ Add A Family", '#', class: 'form-subsection-action js', id: 'new-family-button'
+  h4.form-section-header *{:class => ["#{@color}-secondary"]} Family Details
   - if f.object.family_members.empty?
     .family-suggestions-section
       .form-subsection-header Suggested Families
       ul.family-suggestions
         li Enter a Last Name to see suggestions
-  = f.fields_for :family_members do |builder|
-    .family-details
-      h4= builder.object.family_name
-      = builder.hidden_field :id
-      = builder.text_field :role_list, placeholder: 'Family Role(s)', class: 'span8 family-roles'
+  .families
+    = f.fields_for :family_members do |builder|
+      .family-details data-id=builder.object.id
+        = link_to '#', class: 'remove-form-item remove-family js' do
+          i.icon-trash
+          | Remove Family
+        h4= builder.object.family_name
+        = builder.hidden_field :id
+        = builder.text_field :role_list, placeholder: 'Family Role(s)', class: 'span8 family-roles'
 
 - content_for :load_last do
   = javascript_include_tag 'members'
 
 script id="family-template" type="text/x-handlebars-template"
   .family-details
+    = link_to '#', class: 'remove-form-item remove-family js' do
+      i.icon-trash
+      | Remove Family
     | {{#if familyId}}
-    = hidden_field_tag'form[family_members_attributes][{{id}}][family_name]',
+    = hidden_field_tag 'form[family_members_attributes][{{id}}][family_name]',
       "{{familyId}}"
     | {{/if}}
     = text_field_tag 'form[family_members_attributes][{{id}}][family_name]',
@@ -38,3 +45,8 @@ script id="family-suggestion-template" type="text/x-handlebars-template"
       | {{name}}
       small
         | {{ nameList members ', ' }}
+
+script id="delete-family-template" type="text/x-handlebars-template"
+  = hidden_field_tag 'form[family_members_attributes][{{timestamp}}][_destroy]', true
+  = hidden_field_tag 'form[family_members_attributes][{{timestamp}}][id]', '{{familyId}}'
+
