--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -12,7 +12,8 @@
             span.pull-right.metro-list-item-attachments.hidden-phone
               = link_to edit_member_path(member) do
                 i.icon-wrench *{:class => ["#{@color}-secondary"]}
-              = link_to member_path(member), method: :delete, confirm: "Are you sure?" do
+              = link_to member_path(member),
+                class: 'js', method: :delete, confirm: "Are you sure?" do
                 i.icon-trash *{:class => ["#{@color}-secondary"]}
             .pull-right.metro-list-item-attachments.visible-phone
               = link_to "mailto:#{member.email}" do
