--- a/app/views/songs/index.html.slim
+++ b/app/views/songs/index.html.slim
@@ -50,4 +50,5 @@ h3.page-title Songs
       $btn = $(this);
       var id = $btn.data('id');
       $('#add-to-set-for-'+id).toggle();
+      return false;
     });
