--- a/app/views/song_sets/index.html.slim
+++ b/app/views/song_sets/index.html.slim
@@ -7,7 +7,7 @@ h3.page-title Sets
     .metro-list-item *{:class => [@color, song_set.play_on < Time.zone.today ? 'archived' : '']}
       .row-fluid
         span.pull-right.metro-list-item-attachments
-          = link_to song_set_path(song_set), method: :delete, confirm: "Are you sure?" do
+          = link_to song_set_path(song_set), class: 'js', method: :delete, confirm: "Are you sure?" do
             i.icon-trash *{:class => ["#{@color}-secondary"]}
         .span2.metro-list-item-title.with-sub-title
           = link_to song_set.name, song_set
