--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -15,6 +15,6 @@ table.table.table-bordered.table-striped
           i.icon-ok
 
       td
-        = link_to "Delete", user_path(user), method: :delete, class: 'btn btn-danger btn-mini', confirm: "Are you sure?"
+        = link_to "Delete", user_path(user), method: :delete, class: 'btn btn-danger js btn-mini', confirm: "Are you sure?"
 
 = link_to "Create User", new_user_path, class: :btn
