--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -1,5 +1,5 @@
 .row-fluid
-  .span12
+  .span10
     .pull-right.page-buttons
       = link_to new_member_path, class: 'btn' do
         i.icon-plus
@@ -38,13 +38,4 @@
                   | Email
                   span
                     = link_to member.email, "mailto:#{member.email}"
-  //.span2.member-filter-form
-    h3.page-title Filter
-    h4 Gender
-    ul
-      li Male
-      li Female
-    h4 Relationship Status
-    ul
-      li Employed
-      li Unemployed
+  = render 'filter_form'
