Migrate to jQRangeSlider

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,7 @@
  *= require dashboard
  *= require songs
  *= require members
- *= require nouislider.fox
+ *= require jquery.rangeslider
  */
 
 @import "bootstrap";
