--- a/app/views/members/_filter_form.html.slim
+++ b/app/views/members/_filter_form.html.slim
@@ -2,12 +2,7 @@
   form
     h3.page-title Filter
     h4.filter-group-header.clear Age
-    .age-slider.noUiSlider
-    span.slider-description
-      .header
-      input type='text'
-      span and
-      input type='text'
+    .slider
     h4.filter-group-header.clear Gender
     ul.filter-options
       li.filter-option Male
@@ -17,11 +12,7 @@
       li.filter-option Employed
       li.filter-option Unemployed
 - content_for :load_last do
-  br
   javascript:
-    $(".age-slider").noUiSlider({
-      range: [3, 92]
-     ,start: [2, 92]
-     ,step: 1
-     ,handles: 2
+    $(".slider").editRangeSlider({
+      arrows: false
     });
