--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -102,14 +102,14 @@ ul.family-suggestions {
 }
 
 .filter-group-header {
-  margin: 0 0 5px 0;
+  margin: 10px 0 1px 0;
+  text-decoration: underline
 }
 
 .filter-options {
   display: inline-block;
   margin: 0;
   list-style: none;
-  margin-bottom: 5px;
 }
 
 .filter-option {
@@ -118,4 +118,14 @@ ul.family-suggestions {
   margin-right: 3px;
   border: 1px solid black;
   cursor: pointer;
+}
+
+input[type='text'].birthday-date {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 4px 6px;
+  min-height: 30px;
+  margin: 0;
 }
