Tweak member filter form styling

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -120,7 +120,7 @@ ul.family-suggestions {
   cursor: pointer;
 }
 
-input[type='text'].birthday-date {
+.member-filter-form input[type='text'] {
   width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
