--- a/app/views/members/_filter_form.html.slim
+++ b/app/views/members/_filter_form.html.slim
@@ -1,16 +1,18 @@
 .span2.member-filter-form
   form
     h3.page-title Filter
+    h4.filter-group-header.clear Search
+    input type='text' placeholder='eg. Surname, Address etc'
     h4.filter-group-header.clear Age
     .slider
     h4.filter-group-header.clear Birthday
     span Between
     br
-    input type='text' class='birthday-date datepicker'
+    input type='text' class='datepicker'
     br
     span and
     br
-    input type='text' class='birthday-date datepicker'
+    input type='text' class='datepicker'
     h4.filter-group-header.clear Gender
     ul.filter-options
       li.filter-option Male
