--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -85,6 +85,7 @@ a {
   margin-bottom: 5px;
   text-transform: uppercase;
   line-height: 14px;
+  white-space: nowrap;
 
   span {
     color: white;
