--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -7,6 +7,7 @@
   color: white;
   padding: 0 3px;
   margin-bottom: 1px;
+  overflow: hidden;
 
   &.archived {
     display: none;
@@ -22,6 +23,7 @@
   color: white;
   position: relative;
   margin-left: 0px !important;
+
   @media (max-width: 767px) {
     padding: 10px 3px;
     padding-right: 20px;
@@ -92,6 +94,7 @@
   a {
     color: white;
   }
+
 }
 
 .metro-list-section-header {
