Add members.js include back in right place

--- a/app/views/members/_form.html.slim
+++ b/app/views/members/_form.html.slim
@@ -17,6 +17,7 @@
     = submit_tag nil, class: 'hidden-submit'
 
 - content_for :load_last do
+  = javascript_include_tag 'members'
   javascript:
     window.familyRoles = [#{FamilyRole.all.map {|r| "'#{r.name}'"}.join(',')}];
     $(function() {
